issues resolved: nlcd legend overlap with layer picker, year filter on its own, huc filter layer works again, and css for layer picker bg color

--- a/src/main/webapp/css/app.css
+++ b/src/main/webapp/css/app.css
@@ -9,7 +9,7 @@ div.filter {
     top: 106px;
     left: 1006px;
 }
-#nlcdlegend {
+#nlcdlegendOld {
 	width: 244px;
 	position: relative;
     left: 758px;
@@ -17,24 +17,27 @@ div.filter {
     height: 400px;
 	z-index: 10;
 }
-#nlcdlegend img {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
+#nlcdimg {
+    width: 244px;
+    height: 400px;
+	position: absolute;
+	left: 757px;
+	top: 151px;
+	z-index: 1000;
 }
 #nlcdlegend span {
 	z-index: 10;
-	top: 377px;
-	left: 143px;
+	top: 634px;
+	left: 899px;
 	background-color: #345280;
 	font-weight: bold;
 	color: white;
-	width: 96px;
+	width: 98px;
 	height: 18px;
-	padding: 2px;
-	position: absolute;
+	padding-left: 4px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    position: absolute;
 	cursor: pointer;
 }
 #nlcdimg {
@@ -43,3 +46,12 @@ div.filter {
 #nlcdthumb {
     display:none;
 }
+
+.olControlLayerSwitcher .layersDiv {
+    padding-top: 5px;
+    padding-left: 10px;
+    padding-bottom: 5px;
+    padding-right: 10px;
+    background-color: #345280;
+}
+
